--- a/raspberrypicode/gui.html
+++ b/raspberrypicode/gui.html
@@ -16,7 +16,7 @@
 
   <!-- graph data here -->
   <div id="Graph">
-    <h2> Graph </h2>
+    <!-- <h2> Graph </h2> -->
     <div id="i_plot"> </div>
         <img id=irms_over_time src="avg_irms_over_time.png">       
     </div>
@@ -26,14 +26,13 @@
 
 <!--  -->
   <!-- text output here -->
-  <div id="text-output">
+  <!--<div id="text-output">
     <h2> Output </h2>
-  </div>
+  </div> -->
 
   <!-- user input here -->
-  <div id="Inputs">
-    <h2> Input </h2>
-    <!-- TO DO -->
+  <!--<div id="Inputs">
+     <h2> Input </h2>
     <form>
 
       <ul>
@@ -43,10 +42,8 @@
       </ul>
 
       <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
- 
-
     </form>
+    </div> -->
 
     <script>
             function turnOnRelay(){
@@ -67,8 +64,7 @@
                  console.log('finished python script');
                 });
             }
-        </script>
-  </div>
+    </script>
 </body>
 
 </html>
