--- a/sih28_sa854/index.html
+++ b/sih28_sa854/index.html
@@ -85,6 +85,7 @@ body {
           <li><a href="#ethics">IEEE Code of Ethics</a></li>
           <li><a href="#legal">Legal Considerations</a></li>
           </ul>
+        <li><a href="#ack">Acknowledgements</a></li>
         <li><a href="#Appendix">Appendix</a></li>
         </ul>
         </h3>
@@ -506,6 +507,10 @@ body {
             <a name="legal"></a>
             <h3>Legal Considerations</h3>
             We would like to warn all attempting this project that it involves live AC power supplies and the danger of electrocution. Practice electrical safety if you attempt this or a similar project and we are not accountable for the effect our device has on your health and/or devices.
+            
+        <a name="ack"></a>
+        <h2>Acknowledgements</h2>
+        We would like to thank Bruce Land for being a great mentor and teacher throughout the course, as well as the TAs of Fall 2019.
             
         <a name="Appendix"></a>
         <h2>Appendix</h2>
