title for web page header

--- a/sih28_sa854/index.html
+++ b/sih28_sa854/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <div class="header">
+<title>Outlet Nanny</title>
 <h1>The Outlet Nanny</h1>
 </div>
 <link rel="stylesheet" href="style.css">
