link to schematic through open source (github.com) repo

--- a/sih28_sa854/index.html
+++ b/sih28_sa854/index.html
@@ -527,7 +527,7 @@ body {
             <h3>Hardware Schematics</h3>
             <img src="outletbox_schem.png">
             <img src="board_and_per.png">
-            <h4><a href="">Schematic of project (Kicad)</a></h4>
+            <h4><a href="https://github.com/saleh99er/ece4760_final_project_outlet_nanny/tree/master/Schematic">Schematic of project (Kicad)</a></h4>
             
             <h3><a href="https://docs.google.com/spreadsheets/d/18cqE4Pgc4_iT54x_7nFSSPi_hINx9QCSq084MaUKshM/edit?usp=sharing">Bill of Materials</a></h3>
             <img src="budget.png">
