small revisions to final lab webpage

--- a/sih28_sa854/index.html
+++ b/sih28_sa854/index.html
@@ -433,7 +433,7 @@ body {
             <a name="safety"></a>
             <h3>Safety</h3>
             <p>
-            None of our wires in our power path are exposed and are well-insulated, in the box or outside of it. We also maintained a tag-out/lock-out system to prevent accidental electrocution. We made sure every connection besides those connecting between the PIC32 and Outlet box were soldered well to avoid any open circuits. Our device also included a switch, which can turn off the device completely. In our UART program, our system starts with the relay off (r = 0) as an additional safeguard. Most of the wires used in this device are contained in a small PVC box that we screwed shut, so there’s absolutely no exposed wiring in our device that’s on the 120V line. Finally, there’s a default current limit set when the device is connected, which is 5A. If the current sensor reads any current value higher than this, it will turn off the relay.
+            None of our wires in our power path are exposed and are well-insulated, in the box or outside of it. We also maintained a tag-out/lock-out system to prevent accidental electrocution. We made sure every connection besides those connecting between the PIC32 and Outlet box were soldered well to avoid any open circuits. Our device also included a switch, which can turn off the device completely. Most of the wires used in this device are contained in a small PVC box that we screwed shut, so there’s absolutely no exposed wiring in our device that’s on the 120V line. Finally, there’s a default current limit set when the device is connected, which is 5A. If the current sensor reads any current value higher than this, it will turn off the relay.
             </p>
             
             <a name="use"></a>
